# myNRC-OCR

./: README.md  pyproject.toml
_includes/: head-custom.html
