[project]
name = "mynrc-ocr"
version = "0.1.0"
description = "Hybrid OCR framework for handwritten Myanmar NRCs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "requests>=2.31",
    "pillow>=9.5",
    "python-dotenv>=1.0",
    "supabase>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
